--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.6.0",
     "plotly.js-dist-min": "^2.8.3",
     "rxjs": "~7.4.0",
+    "socket.io-client": "^4.4.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
