--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "plotly.js": "^2.8.3",
     "plotly.js-dist-min": "^2.8.3",
     "rxjs": "~7.4.0",
     "socket.io-client": "^4.4.1",
@@ -33,6 +34,7 @@
     "@angular/cli": "~13.0.4",
     "@angular/compiler-cli": "~13.0.0",
     "@types/jasmine": "~3.10.0",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^12.11.1",
     "@types/plotly.js-dist-min": "^2.3.0",
     "jasmine-core": "~3.10.0",
