--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "plotly.js-dist-min": "^2.8.3",
     "rxjs": "~7.4.0",
     "socket.io-client": "^4.4.1",
+    "@types/plotly.js-dist-min": "^2.3.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
